# checkoff_multi

checkoff_c/: .gitignore  Dockerfile  Dockerfile.glibc  Dockerfile.glibc_small  Dockerfile.glibc_stages  Dockerfile.microhttpd  Dockerfile.scratch
checkoff_c/src/: main.c  server.c  server.h
checkoff_c/src_mhd/: json.c  json.h  main.c  server.c  server.h
checkoff_c/src_nomalloc/: json.c  main.c  server.c
checkoff_python/: Dockerfile  Dockerfile.base  Dockerfile.standalone  main.py  requirements.txt  server.py  standalone.py
checkoff_python/checkoff_python/: __init__.py  server.py
checkoff_python/checkoff_python/routes/: __init__.py  todo_item.py  util.py
checkoff_rust/: Cargo.toml  Dockerfile  README.md
checkoff_rust/src/: main.rs
checkoff_syscalls/: Dockerfile
checkoff_syscalls/src/: main.c  my_http_request.c  my_http_request.h  myhttp.c  myhttp.h  mystdlib.c  mystdlib.h  nolibc_includer.h  syscall.c  syscall.h
checkoff_vue/: package-lock.json  package.json
