[package]
name = "checkoff_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
httparse = "1.10.0"
matchit = "0.8.6"
miniserde = "0.1"
mysql = {version="26", features = ["minimal-rust"]}
mimalloc = { version = "0.1.43", features = ["secure"] }

[profile.release]
strip = true
opt-level = "z" # optimize for size
lto = true
